--- a/src/app/pages/mypage/mypage.component.scss
+++ b/src/app/pages/mypage/mypage.component.scss
@@ -8,7 +8,7 @@
   //color: #bfa060;
 }
 
-.mat-tab-group{
+#mypage{// .mat-tab-group{
   ::ng-deep.mat-tab-header{
       background-color: #ece9e7;
       height: 55px;
@@ -60,6 +60,11 @@
             }
           }
         }
+      }
+
+      .mat-tab-header-pagination{
+        min-width: 20px;
+        box-shadow: none;
       }
 
       ::ng-deep.mat-ink-bar{
