--- a/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.scss
+++ b/src/app/pages/mypage/mypage-reviewlist/mypage-reviewlist.component.scss
@@ -168,5 +168,15 @@
       }
     }
 
+    .noReviewbox{
+      padding: 16px;
+      border: 1px solid #BFBFBF;
+      border-radius: 10px;
+      min-height: 184px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
   }
 }
