--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -1761,6 +1761,24 @@
       min-width: initial;
     }
   }
+
+  .newplan{
+    margin-top: $mtop;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-width: $width;
+    button{
+      background: url("../../../assets/img/btn_new.svg") no-repeat;
+      border: 0;
+      width: 40px;
+      height: 40px;
+      min-width: initial;
+      &:disabled{
+        opacity: 0.5;
+      }
+    }
+  }
 }
 
 ::ng-deep.mat-card:not([class*="mat-elevation-z"]) {
