REMOJU-369 確認メッセージ文言修正

--- a/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.html
+++ b/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.html
@@ -3,6 +3,6 @@
   <div style="word-wrap: break-word;">{{ data }}</div>
 </mat-dialog-content>
 <mat-dialog-actions>
+  <button mat-raised-button (click)="onClickCopy()">{{ 'Copy' | translate }}</button>
   <button mat-raised-button mat-dialog-close="cancel">{{ 'Return' | translate }}</button>
-  <button *ngIf="data" mat-raised-button (click)="onClickCopy()">{{ 'Copy' | translate }}</button>
 </mat-dialog-actions>
