--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
@@ -4,6 +4,6 @@
   <span class="subtext" *ngIf="data.subText">{{ data.subText | translate }}</span>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-raised-button mat-dialog-close="cancel" class="cancel">{{ data.leftButton | translate }}</button>
-  <button mat-raised-button mat-dialog-close="ok" class="ok">{{ data.rightButton | translate }}</button>
+  <button mat-raised-button mat-dialog-close="ok" class="ok">{{ data.leftButton | translate }}</button>
+  <button mat-raised-button mat-dialog-close="cancel" class="cancel">{{ data.rightButton | translate }}</button>
 </mat-dialog-actions>
