--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -92,6 +92,14 @@ header {
         height: 27px;
       }
     }
+
+    .mat-icon-button.user{
+      img{
+        width: 27px;
+        height: 27px;
+        border-radius: 50%;
+      }
+    }
     
     .mat-icon{
       font-size: 24px;
@@ -102,8 +110,6 @@ header {
     .mat-icon-button.mat-primary{
         color: $color-gry06;
     }
-
-
   }
 
   .feature{
