--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -705,6 +705,7 @@ span.sortlink {
 
           ::ng-deep.owl-item {
             position: relative;
+            width: 25%!important;
         
             .thumbspots {
               .thumbnum {
@@ -712,6 +713,7 @@ span.sortlink {
                 height: 25px;
                 width: 20px;
                 left: 5px;
+                top: 0;
                 line-height: 18px;
                 text-align: center;
                 background-image: url("../../../assets/img/pin_red.svg");
@@ -723,7 +725,7 @@ span.sortlink {
                 }
               }
         
-              display: inline-flex !important;
+              // display: inline-flex !important;
         
               img {
                 margin-top: 10px;
