--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -419,7 +419,8 @@
         line-height: 24px;
         dt{
           font-size: 10px;
-          color: #a6a29e;
+          font-weight: 700;
+          color: $color-gld04;
           text-align: center;
           &:nth-child(1){
             flex-basis: 12%;
@@ -1718,7 +1719,7 @@
     align-items: center;
     min-width: $width;
     button{
-      background: url("../../../assets/img/btn_alldelete.svg") no-repeat;
+      background: url('../../../assets/img/btn_alldelete.svg') no-repeat;
       border: 0;
       width: 40px;
       height: 40px;
