--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.html
@@ -7,7 +7,7 @@
           <span class="username">{{genUserName()}}</span>
         </span>
       </div>
-      <div class='rt'>
+      <div class='rt' [ngClass]="{'fav':myFavorite}">
         <span class='mark'>
           <img [src]="genMarkPath()" alt="mark">
         </span>
@@ -15,6 +15,7 @@
           {{genTitle()}}
         </span>
       </div>
+      <button *ngIf="myFavorite" type="button" class="delete" (click)="onClickDeleteFavorite(item)"></button>
     </div>
     <div class='card-box'>
       <div class='card-header'>
@@ -68,7 +69,7 @@
             <span *ngIf="!isProd">
               {{item.id}}
             </span>
-            <button mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}" (click)="onClickFavorite(item)">
+            <button *ngIf="!myFavorite" mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}" (click)="onClickFavorite(item)">
             </button>
             
           </mat-list-item>
@@ -131,7 +132,7 @@
           <span class="username">google</span>
         </span>
       </div>
-      <div class='rt'>
+      <div class='rt' [ngClass]="{'fav':myFavorite}">
         <span class='mark'>
           <img [src]="genMarkPath()" alt="mark">
         </span>
@@ -139,6 +140,7 @@
           {{ item.googleSpot.spot_name}}
         </span>
       </div>
+      <button *ngIf="myFavorite" type="button" class="delete" (click)="onClickDeleteFavorite(item)"></button>
     </div>
     <div class='card-box'>
       <div class='card-header'>
@@ -166,7 +168,7 @@
             <span class="note">
               Remojuではまだ掲載されていないスポットです。Googleから場所を取得しています。
             </span>
-            <button mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}">
+            <button *ngIf="!myFavorite" mat-button class="add-to-favorite" [ngClass]="{'on':item.isFavorite}" (click)="onClickFavorite(item)">
             </button>
           </mat-list-item>
           <mat-list-item class="row mt1">
