--- a/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
+++ b/src/app/pages/planspot/components/planspot-list-item/planspot-list-item.component.scss
@@ -34,7 +34,9 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      width: 100%;
       .mark{
+        flex-basis: 41px;
         img{
           width: 41px;
           height: 16px;
@@ -45,6 +47,24 @@
         font-size: 13px;
         color: #000;
         font-weight: bolder;
+      }
+
+      &.fav{
+        margin-right: 36px;
+      }
+    }
+
+    button.delete{
+      all: unset;
+      position: absolute;
+      right: 16px;
+      top: 16px;
+      &::before{
+        content: url('../../../../../assets/img/btn_delete.svg');
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        vertical-align: text-bottom;
       }
     }
   }
