--- a/src/assets/scss/_styles.scss
+++ b/src/assets/scss/_styles.scss
@@ -6,6 +6,7 @@ body {
   color: #666;
   -webkit-font-smoothing: antialiased;
   touch-action: pan-x pan-y;
+  -webkit-touch-callout:none; /* リンク長押しのポップアップを無効化 */
 }
 
 body {
