--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -442,7 +442,7 @@
               </div>
             </div>
             <div class="card-box">
-              <div class="card-header" (click)="linktoSpot(item.spotId)">
+              <div class="card-header" (click)="linktoSpot(item)">
                 <!-- 写真(複数枚) -->
                 <owl-carousel-o
                   *ngIf="item.previewPictures?.length > 1; else singlePict"
