REMOJU-373 URL共有はマイプラン一覧に移動

--- a/src/app/pages/mypage-planlist/mypage-planlist.component.html
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.html
@@ -70,6 +70,12 @@
               <button  mat-flat-button class="edit-to-plan" (click)="onClickEditPlan(row)">
                 {{ "EditPlan" | translate }}
               </button>
+              <!-- URL共有 -->
+              <div class="share">
+                <button mat-button type="button" id="planshare" (click)="onClickSharePlan(row)">
+                </button>
+                <label for="planshare">{{ "SharePlan" | translate }}</label>
+              </div>
             </mat-list-item>
           </mat-list>
 
