--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -852,11 +852,11 @@ span.sortlink {
             }
 
             .share{
-              margin-top: $mtop;
+              //margin-top: $mtop;
               display: flex;
               flex-direction: column;
               align-items: center;
-              min-width: $width;
+              //min-width: $width;
               button{
                 background: url("../../../assets/img/btn_share.svg") no-repeat;
                 border: 0;
