--- a/src/app/pages/mypage-planlist/mypage-planlist.component.html
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.html
@@ -67,14 +67,15 @@
               <span>
                 {{ "LastUpdated" | translate }} : {{ row.updateDatetime | date:"yyyy/MM/dd" }}<br />
               </span>
-              <button  mat-flat-button class="edit-to-plan" (click)="onClickEditPlan(row)">
+              <button mat-flat-button class="edit-to-plan" (click)="onClickEditPlan(row)">
                 {{ "EditPlan" | translate }}
               </button>
               <!-- URL共有 -->
               <div class="share">
-                <button mat-button type="button" id="planshare" (click)="onClickSharePlan(row)">
+                <button mat-flat-button class="share" id="planshare" (click)="onClickSharePlan(row)">
+                  <mat-icon>share</mat-icon>
+                  {{ "SharePlan" | translate }}
                 </button>
-                <label for="planshare">{{ "SharePlan" | translate }}</label>
               </div>
             </mat-list-item>
           </mat-list>
