--- a/src/app/pages/mypage-planlist/mypage-planlist.component.scss
+++ b/src/app/pages/mypage-planlist/mypage-planlist.component.scss
@@ -705,7 +705,7 @@ span.sortlink {
 
           ::ng-deep.owl-item {
             position: relative;
-            width: 25%!important;
+            // width: 25%!important;
 
             .thumbspots {
               .thumbnum {
@@ -847,23 +847,40 @@ span.sortlink {
               background: #bfa060;
               // padding: 0 25px;
               line-height: 27px;
-              width: 100px;
+              width: 90px;
               white-space: nowrap;
+              padding: 0;
             }
 
             .share{
-              //margin-top: $mtop;
-              display: flex;
-              flex-direction: column;
-              align-items: center;
-              //min-width: $width;
-              button{
-                background: url("../../../assets/img/btn_share.svg") no-repeat;
-                border: 0;
-                width: 40px;
-                height: 40px;
-                min-width: initial;
+              color: #bfa060;
+              font-size: 13px;
+              font-weight: 700;
+              border: 1px solid #fff;
+              border-radius: 5px;
+              background: #EBEBEB;
+              // padding: 0 25px;
+              line-height: 27px;
+              width: 90px;
+              white-space: nowrap;
+              padding: 0;
+
+              .mat-icon{
+                font-size: 16px;
+                height: 19px;
               }
+              //margin-top: $mtop;
+              // display: flex;
+              // flex-direction: column;
+              // align-items: center;
+              //min-width: $width;
+              // button{
+              //   background: url("../../../assets/img/btn_share.svg") no-repeat;
+              //   border: 0;
+              //   width: 40px;
+              //   height: 40px;
+              //   min-width: initial;
+              // }
             }
           }
 
