--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -43,7 +43,8 @@
 
       .myplan-edit-box {
         padding: 3px 16px;
-        border: $color-gld06 1px solid;
+        border-top: $color-gld06 1px solid;
+        border-bottom: $color-gld06 1px solid;
         display: flex;
         box-shadow: 0 4px 6px #0000001f;
         height: 65px;
@@ -82,7 +83,7 @@
           display: flex;
           flex-direction: column;
           .container{
-            overflow: hidden;
+            //overflow: hidden;
 
             .label{
               position: absolute;
@@ -99,6 +100,15 @@
 
             span>span.required{
               color: red;
+            }
+
+            ::ng-deep{
+              .mat-form-field{
+                padding-top: 1.4em;
+                .mat-form-field-infix{
+                  padding: 0.4375em 0;
+                }
+              }
             }
           }
         }
@@ -1029,6 +1039,14 @@
     }
   }
 
+  .down_fill{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+    img{
+      width: 16px;
+    }
+  }
 
   .box{
     margin-top: 16px;
@@ -1513,6 +1531,13 @@
                   padding: 0.3em 0.5em;
                   border-radius: 0.5em;
                   width: 100%;
+
+                  &.close{
+                    display: -webkit-box;
+                    -webkit-line-clamp: 3;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                  }
                 }
               }
             }
