--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.html
@@ -5,5 +5,6 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button mat-dialog-close="ok" class="ok">{{ data.leftButton | translate }}</button>
-  <button mat-raised-button mat-dialog-close="cancel" class="cancel">{{ data.rightButton | translate }}</button>
+  <!-- <button mat-raised-button mat-dialog-close="cancel" class="cancel">{{ data.rightButton | translate }}</button> -->
+  <button type="button" mat-dialog-close="cancel" class="abscancel"></button>
 </mat-dialog-actions>
