--- a/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.scss
+++ b/src/app/parts/confirm-message-dialog/confirm-message-dialog.component.scss
@@ -6,6 +6,7 @@
 ::ng-deep.mat-dialog-container{
   border-radius: 10px;
   padding: 30px 26px!important;
+  position: relative;
   .mat-dialog-title{
     font-size: 16px;
     display: inline-flex;
@@ -31,7 +32,8 @@
     }
   }
   .mat-dialog-actions{
-    justify-content: space-between;
+    // justify-content: space-between;
+    justify-content: center;
     margin-top: 30px;
     margin-bottom: -20px;
     button{
@@ -48,6 +50,25 @@
         background-color: $color-gld01;
         color:#fff;
         font-size: 20px;
+      }
+
+      &.abscancel{
+        all:unset;
+        position: absolute;
+        width: 23px;
+        top: 7px;
+        right: 7px;
+        &::before{
+          content: url("../../../assets/img/btn_delete.svg");
+        }
+        // &::after{
+        //   content: 'close';
+        //   font-size: 12px;
+        //   position: absolute;
+        //   top: 29px;
+        //   left: 0;
+        // }
+        
       }
     }
   }
