--- a/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
+++ b/src/app/parts/google-spot-dialog/google-spot-dialog.component.html
@@ -3,10 +3,10 @@
 <mat-dialog-content>
   <div class="form">
     <mat-form-field appearance="outline" style="width: 100%;">
+      <mat-label>{{ 'GoogleKeyword' | translate }}</mat-label>
       <input
         matInput
         id="keyword"
-        placeholder="{{ 'GoogleKeyword' | translate }}"
         value="{{ place ? place.name : '' }}" />
     </mat-form-field>
   </div>
@@ -26,5 +26,6 @@
 
 <mat-dialog-actions>
   <button mat-button type="button" class="setting" (click)="onClickOK()">{{ "Set" | translate }}</button>
-  <button mat-button type="button" class="cancel" mat-dialog-close="cancel">{{ "Return" | translate }}</button>
+  <!-- <button mat-button type="button" class="cancel" mat-dialog-close="cancel">{{ "Return" | translate }}</button> -->
+  <button type="button" mat-dialog-close="cancel" class="abscancel"></button>
 </mat-dialog-actions>
