--- a/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.html
+++ b/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.html
@@ -5,5 +5,6 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-raised-button class="ok" (click)="onClickCopy()">{{ 'Copy' | translate }}</button>
-  <button mat-raised-button mat-dialog-close="cancel">{{ 'Return' | translate }}</button>
+  <!-- <button mat-raised-button mat-dialog-close="cancel">{{ 'Return' | translate }}</button> -->
+  <button type="button" mat-dialog-close="cancel" class="abscancel"></button>
 </mat-dialog-actions>
