--- a/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.scss
+++ b/src/app/parts/urlcopy-dialog/urlcopy-dialog.component.scss
@@ -8,6 +8,7 @@
   #urlShare{
     border-radius: 10px;
     padding: 30px 26px!important;
+    position: relative;
     .mat-dialog-title{
       font-size: 16px;
       display: inline-flex;
@@ -43,7 +44,7 @@
       }
     }
     .mat-dialog-actions{
-      justify-content: space-between;
+      justify-content: center;
       margin-top: 30px;
       margin-bottom: -20px;
       button{
@@ -60,6 +61,17 @@
           background-color: $color-gld01;
           color:#fff;
           font-size: 20px;
+        }
+
+        &.abscancel{
+          all:unset;
+          position: absolute;
+          width: 23px;
+          top: 7px;
+          right: 7px;
+          &::before{
+            content: url("../../../assets/img/btn_delete.svg");
+          }
         }
       }
     }
